--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>Hello Cousera!</title>
 </head>
 <body>
-	<h1>Hello Cousera!</h1>
+	<h1>Hello Cousera! Its a great Course</h1>
 
 </body>
 </html>
